Fix code-box overflowing parent container

--- a/modules/admin/public/assets/css/admin.css
+++ b/modules/admin/public/assets/css/admin.css
@@ -50,3 +50,7 @@ dt {
 ul.modulelist {
   column-count: 3;
 }
+
+div.code-box-content {
+  padding: 0;
+}
